third_party/move/move-compiler-v2/tests/lambda/inline-parity/inline_fun_in_spec.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/inline_fun_in_spec.move:19:28
   │
19 │         spec { assert exec(|y| y > 0, x); };
   │                            ^^^^^^^^^
